<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accepting_calling">正在接听...</string>
    <string name="action_settings">Settings</string>
    <string name="alert_cancel">取消</string>
    <string name="alert_confirm">确定</string>
    <string name="alert_notification">提示</string>
    <string name="alert_quit">退出</string>
    <string name="alert_quit_app_content">您确定要退出CarLife吗？</string>
    <string name="answer_call">接听</string>
    <string name="app_name">百度 CarLife</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_tips">为确保连接成功，请允许CarLife的授权请求</string>
    <string name="auth_tips_img">点击确定</string>
    <string name="auth_tips_tv_title">允许授权</string>
    <string name="baidu_help"><u>帮助</u></string>
    <string name="baidu_logo">\@ 2014 Baidu</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="carlife_phone_not_support_hint">非常抱歉，CarLife目前不支持该手机，请期待后续的更新支持，请谅解</string>
    <string name="carlife_toast_crash">非常抱歉，CarLife出现异常，即将退出！</string>
    <string name="carlife_toast_gps_open">请开启GPS导航</string>
    <string name="carlife_toast_low_power">当前手机电量低于30%， 请及时为手机充电！！！</string>
    <string name="carlife_toast_no_wifi">蓝牙通道已建立，请打开wifi，使得可以进行WLAN直连</string>
    <string name="carlife_toast_protocol_not_match">非常抱歉，车载系统不支持您手机上的CarLife版本，请升级手机端CarLife版本</string>
    <string name="carlife_update_backstage">后台升级</string>
    <string name="carlife_update_cancel">取消</string>
    <string name="carlife_update_click_to_install">点击安装</string>
    <string name="carlife_update_download_fail">下载失败</string>
    <string name="carlife_update_download_failed_dialog_content">由于网络问题未成功下载</string>
    <string name="carlife_update_download_failed_dialog_retry">重新下载</string>
    <string name="carlife_update_download_failed_dialog_title">下载失败</string>
    <string name="carlife_update_download_finish">CarLife 下载完成</string>
    <string name="carlife_update_downloading">CarLife 正在下载</string>
    <string name="carlife_update_go_to_foreground">点击查看详情</string>
    <string name="carlife_update_no_network">网络没有连接，请检查设置</string>
    <string name="carlife_update_no_new_version">当前应用已经是最新版本</string>
    <string name="carlife_update_tips_dialog_cancel">以后再说</string>
    <string name="carlife_update_tips_dialog_confirm">马上更新</string>
    <string name="carlife_update_tips_dialog_title">更新提示</string>
    <string name="carlife_update_wait_for_complete">请等待当前更新完成</string>
    <string name="carlife_video_permission_denied_hint">如需继续使用，请重新连接并点击弹窗内的“立即开始”</string>
    <string name="carlife_video_permission_hint">请点击手机弹窗内的“立即开始”</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="conf_init_fail">读取配置文件失败，请重新启动CarLife或者检查配置文件是否正确!</string>
    <string name="connect_background_hint">请点击手机端CarLife，且不要锁屏</string>
    <string name="connect_diagnose_title">诊断建议</string>
    <string name="connect_screenoff_hint">请点击手机端CarLife，且不要锁屏</string>
    <string name="connect_start_carlife">启动CarLife</string>
    <string name="control_add">Add</string>
    <string name="control_answer_call">AnswerCall</string>
    <string name="control_back">Back</string>
    <string name="control_car_speed_02">车速2KM</string>
    <string name="control_car_speed_10">车速10KM</string>
    <string name="control_clear">Clear</string>
    <string name="control_commit">Commit</string>
    <string name="control_delete">Delete</string>
    <string name="control_down">Down</string>
    <string name="control_home">Home</string>
    <string name="control_left">Left</string>
    <string name="control_map">Map</string>
    <string name="control_media">Media</string>
    <string name="control_mobile_mic">MobileMic</string>
    <string name="control_music_start">开始音乐</string>
    <string name="control_music_stop">停止音乐</string>
    <string name="control_navi_stop">停止导航</string>
    <string name="control_next">Next</string>
    <string name="control_no_mic">NoMic</string>
    <string name="control_ok">OK</string>
    <string name="control_phone">Phone</string>
    <string name="control_phone_call">拨接电话</string>
    <string name="control_phone_end">挂断电话</string>
    <string name="control_previous">Previous</string>
    <string name="control_record_start">开始语音</string>
    <string name="control_record_stop">停止语音</string>
    <string name="control_right">Right</string>
    <string name="control_save_spspps">SaveSPSPPS</string>
    <string name="control_start_call">StartCall</string>
    <string name="control_sub">Sub</string>
    <string name="control_up">Up</string>
    <string name="copy">Copy</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="gps_data_tips">请开启GPS导航...</string>
    <string name="help_android_aoa_device">查看如何允许手机上弹出的授权请求</string>
    <string name="help_android_aoa_title">安卓手机</string>
    <string name="help_android_check_content">连接后手机处于充电状态，但无法建立连接，可能是您的USB线仅支持充电，不支持数据传输，您可以换根数据线后尝试重连</string>
    <string name="help_android_check_title">检查数据线并重新连接</string>
    <string name="help_android_checkot_install">确认手机已安装CarLife</string>
    <string name="help_android_default_connect_type">车机默认连接方式</string>
    <string name="help_android_device">查看如何开启“USB调试”</string>
    <string name="help_android_reboot_and_try">尝试重启手机再次连接</string>
    <string name="help_android_usb_title">安卓手机</string>
    <string name="help_apple_auth_tips">允许手机上弹出的授权请求</string>
    <string name="help_apple_check_title">检查数据线并重新连接</string>
    <string name="help_apple_checkot_install">确认手机已安装CarLife</string>
    <string name="help_apple_device">查看如何开启“个人热点”连接车机</string>
    <string name="help_apple_ncm_devices">查看如何允许手机上弹出的授权请求</string>
    <string name="help_apple_ncm_title">苹果手机</string>
    <string name="help_apple_reboot_and_try">尝试重启手机再次连接</string>
    <string name="help_apple_title">苹果手机</string>
    <string name="help_main_android_device">安卓手机</string>
    <string name="help_main_apple_device">苹果手机</string>
    <string name="help_main_phone_system">您使用的手机系统</string>
    <string name="help_main_title">连接帮助</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="incoming_calling">新的来电...</string>
    <string name="item_view_role_description">Tab</string>
    <string name="line_is_busy">通话中</string>
    <string name="line_is_coming">来电中</string>
    <string name="loading_progress_tips">连接中...</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="module_custom_usb_ConnectType">USB连接方式</string>
    <string name="module_custom_wifi_ConnectType">WIFI连接方式</string>
    <string name="module_custom_wifi_default_ip">192.168.43.1</string>
    <string name="module_setting">设置</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="usb_connect_btn_retry">重新连接</string>
    <string name="usb_not_connected">请连接手机和车载系统</string>
</resources>