<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#aa1b324d" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <Button android:id="@id/control_btn_home" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_home" />
        <Button android:id="@id/control_btn_phone" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_phone" />
        <Button android:id="@id/control_btn_map" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_map" />
        <Button android:id="@id/control_btn_media" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_media" />
        <ImageButton android:layout_gravity="right" android:id="@id/exit_img_btn" android:background="@null" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/com_exitapp_btn_selector" android:scaleType="fitCenter" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <Button android:id="@id/control_btn_seek_sub" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_sub" />
        <Button android:id="@id/control_btn_seek_add" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_add" />
        <Button android:id="@id/control_btn_clear" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_clear" />
        <Button android:id="@id/control_btn_delete" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_delete" />
        <Button android:id="@id/control_btn_back" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_back" />
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/control_btn_left" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_left" android:layout_centerVertical="true" />
        <Button android:id="@id/control_btn_up" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/control_up" android:layout_toRightOf="@id/control_btn_left" android:layout_above="@id/control_btn_left" />
        <Button android:id="@id/control_btn_ok" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_ok" android:layout_toRightOf="@id/control_btn_left" android:layout_centerVertical="true" />
        <Button android:id="@id/control_btn_down" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_down" android:layout_toRightOf="@id/control_btn_left" android:layout_below="@id/control_btn_ok" />
        <Button android:id="@id/control_btn_right" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_margin="5.0dip" android:text="@string/control_right" android:layout_toRightOf="@id/control_btn_ok" android:layout_centerVertical="true" />
        <Button android:id="@id/control_btn_selector_previous" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_margin="5.0dip" android:text="@string/control_previous" android:layout_toRightOf="@id/control_btn_right" android:layout_centerVertical="true" />
        <Button android:id="@id/control_btn_selector_next" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_margin="5.0dip" android:text="@string/control_next" android:layout_toRightOf="@id/control_btn_selector_previous" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <Button android:id="@id/control_record_start" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_record_start" />
        <Button android:id="@id/control_record_stop" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_record_stop" />
        <Button android:id="@id/control_music_start" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_music_start" />
        <Button android:id="@id/control_music_stop" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_music_stop" />
        <Button android:id="@id/control_phone_call" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_phone_call" />
        <Button android:id="@id/control_phone_end" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_phone_end" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <EditText android:textSize="16.0sp" android:textColor="#ffffff00" android:id="@id/control_video_test_et" android:layout_width="80.0dip" android:layout_height="40.0dip">
            <requestFocus />
        </EditText>
        <Button android:id="@id/control_video_test_btn1" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_commit" />
        <Button android:id="@id/control_video_test_btn2" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="120.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_save_spspps" />
        <Button android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_start_call" />
        <Button android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_answer_call" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
        <Button android:id="@id/control_btn_not_support_mic" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_no_mic" />
        <Button android:id="@id/control_btn_use_mobile_mic" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_mobile_mic" />
        <Button android:id="@id/control_navi_stop" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_navi_stop" />
        <Button android:id="@id/control_car_speed_10" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_car_speed_10" />
        <Button android:id="@id/control_car_speed_02" android:background="@drawable/com_main_fragment_btn_retry_selector" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/control_car_speed_02" />
    </LinearLayout>
</LinearLayout>