<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/cl_bg_c_main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox android:layout_width="60.0dip" android:layout_height="wrap_content" />
        <TextView android:textSize="24.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/module_custom_usb_ConnectType" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox android:layout_width="60.0dip" android:layout_height="wrap_content" />
        <TextView android:textSize="24.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/module_custom_wifi_ConnectType" />
        <EditText android:textSize="24.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/module_custom_wifi_default_ip" android:inputType="text" />
    </LinearLayout>
</LinearLayout>