<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/main_layout" android:background="@color/cl_bg_c_main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:android_custom="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:id="@id/rellayout_bar" android:layout_width="fill_parent" android:layout_height="104.0dip">
        <ImageButton android:id="@id/exit_img_btn" android:background="@drawable/com_bg_btn_selector" android:layout_width="84.0dip" android:layout_height="84.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:src="@drawable/car_ic_exit" android:scaleType="center" android:layout_alignParentLeft="true" />
        <TextView android:textSize="24.0sp" android:textColor="@color/cl_text_a4_title" android:gravity="center" android:id="@id/main_btn_help" android:background="@drawable/com_bg_btn_selector" android:layout_width="84.0dip" android:layout_height="84.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="12.0dip" android:scaleType="center" android:text="@string/baidu_help" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/main_rellayout_status" android:layout_width="648.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:id="@id/main_img_view" android:layout_width="fill_parent" android:layout_height="216.0dip" android:layout_marginTop="105.0dip" android:src="@drawable/car_ic_usbwifi" />
        <TextView android:textSize="27.0sp" android:textColor="@color/cp_cont_d" android:gravity="center" android:id="@id/main_info_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/usb_not_connected" android:layout_below="@id/main_img_view" android:layout_centerHorizontal="true" />
        <Button android:textSize="24.0dip" android:textColor="@color/cl_text_a4_bgtext" android:id="@id/main_retry_btn" android:background="@drawable/selector_btn_retry" android:visibility="invisible" android:layout_width="204.0dip" android:layout_height="66.0dip" android:layout_marginTop="18.0dip" android:text="@string/usb_connect_btn_retry" android:layout_below="@id/main_info_text_view" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <com.baidu.carlifevehicle.view.LoadingProgressBar android:id="@id/main_load_round_progress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
</RelativeLayout>