<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/cl_bg_c_main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/common_title_bar" layout="@layout/carlife_common_title_bar_new" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/common_title_bar">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/com_bg_item_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="30.0sp" android:textColor="@color/cl_text_a5_content" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_apple_checkot_install" />
                <View android:background="@color/cl_line_a1_item" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" />
            </LinearLayout>
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/com_bg_item_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="30.0sp" android:textColor="@color/cl_text_a5_content" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_apple_auth_tips" />
                <View android:background="@color/cl_line_a1_item" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" />
            </LinearLayout>
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/com_bg_item_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="30.0sp" android:textColor="@color/cl_text_a5_content" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_apple_check_title" />
                <View android:background="@color/cl_line_a1_item" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" />
            </LinearLayout>
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/goto_apple_layout" android:background="@drawable/com_bg_item_selector" android:layout_width="fill_parent" android:layout_height="96.0dip" android:layout_weight="1.0">
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="30.0sp" android:textColor="@color/cl_text_a5_content" android:id="@id/android_device" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_apple_device" />
                    <ImageView android:layout_width="24.0dip" android:layout_height="39.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/car_ic_more01" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <View android:background="@color/cl_line_a1_item" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            </LinearLayout>
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/com_bg_item_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="30.0sp" android:textColor="@color/cl_text_a5_content" android:paddingLeft="24.0dip" android:paddingTop="24.0dip" android:paddingRight="24.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/help_apple_reboot_and_try" />
                <View android:background="@color/cl_line_a1_item" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" />
            </LinearLayout>
            <FrameLayout android:layout_width="84.0dip" android:layout_height="96.0dip" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>